<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Final Project</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_parent">Parent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">InsideOut</string>
    <string name="nav_header_subtitle">InsideOut@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_messages">History</string>
    <string name="menu_call_log">Call Log</string>
    <string name="menu_run_app">Running Apps</string>
    <string name="menu_apps">All Apps</string>
    <string name="menu_cantact">Contact List</string>
    <string name="menu_todaysTrack">Footstep</string>
    <string name="menu_predict">Next Location</string>
    <string name="menu_share">Share</string>
    <string name="menu_signOut">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="final_project">Final Project</string>
    <string name="manos_yahoo_gr">manos@yahoo.gr</string>
    <string name="message_here">message here</string>
    <string name="activity_predict">Activity Predict</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="sign_out">sign Out</string>
    <string name="messages">Messages</string>

</resources>