<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contacts"
            android:title="@string/menu_cantact" />

        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_history"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_call_log"
            android:icon="@drawable/ic_call_log"
            android:title="@string/menu_call_log" />
        <item
            android:id="@+id/nav_app"
            android:icon="@drawable/ic_apps"
            android:title="@string/menu_apps" />
        <item
            android:id="@+id/nav_todaysTrack"
            android:icon="@drawable/ic_footstep"
            android:title="@string/menu_todaysTrack" />
        <item
            android:id="@+id/nav_menu_predict"
            android:icon="@drawable/ic_predict"
            android:title="@string/menu_predict" />
        <item
            android:id="@+id/nav_menu_predict_activity"
            android:icon="@drawable/ic_predict"
            android:title="@string/activity_predict" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_signOut"
                android:icon="@drawable/ic_signout"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
